# profile.mobile.apps.native.quickpanel

./: .cproject  .gitignore  .project  AUTHORS  CMakeLists.txt  NOTICE  project_def.prop  tizen-manifest.xml
daemon/: accessibility.c  accessibility.h  common.c  common.h  common_uic.c  common_uic.h  handler_controller.h  list_util.h  media.c  media.h  preference.c  preference.h  quickpanel-ui.c  quickpanel-ui.h  voice_control.c  voice_control.h
daemon/datetime/: datetime.c  util-time.c  util-time.h
daemon/device/: brightness.c
daemon/minictrl/: minictrl.c
daemon/notifications/: activenoti.c  animated_image.c  noti.c  noti.h  noti_list_item.c  noti_list_item.h  noti_node.c  noti_node.h  noti_section.c  noti_section.h  noti_util.c  noti_util.h  noti_view.c  noti_view_listype.c  noti_view_ongoing.c  noti_win.c  noti_win.h
daemon/page/: page_base.c  page_edit.c  page_edit.h  page_setting_all.c  page_setting_all.h  pager.c
daemon/service/: animated_icon.c  emergency_mode.h  keyboard.c  reminder.c  reminder.h  uninstall.c
daemon/settings/: setting_module_api.c  setting_module_api.h  setting_utils.c  setting_utils.h  settings.c  settings.h  settings_icon_common.c  settings_icon_common.h  settings_ipc.c  settings_ipc.h  settings_view_all.c  settings_view_all.h  settings_view_featured.c  settings_view_featured.h
daemon/settings/modules/: bluetooth.c  gps.c  sound-profile.c  wifi.c
daemon/vi/: vi_manager.c  vi_manager.h
data/: CMakeLists.txt  color_classes.edc  quickpanel  quickpanel.desktop.in  quickpanel.edc  quickpanel.sh.in  quickpanel.xml.in  quickpanel_animated_icon.edc  quickpanel_brightness.edc  quickpanel_def.h  quickpanel_images.edc  quickpanel_listitem_noti.edc  quickpanel_listitem_ongoing.edc  quickpanel_minictrl.edc  quickpanel_noti_section.edc  quickpanel_page_setting_all.edc  quickpanel_setting.edc  quickpanel_theme.edc  quickpanel_theme_progressbar.edc  quickpanel_theme_slider.edc  quickpanel_voice_control.edc
inc/: animated_icon.h  animated_image.h  common.h  datetime.h  keyboard.h  minictrl.h  modules.h  noti_led.h  noti_listbox.h  noti_util.h  noti_view.h  page_base.h  pager.h  pager_common.h  quickpanel-ui.h  quickpanel_debug_util.h  setting_module_api.h  settings_gridbox.h  sim_controller.h  uninstall.h  voice_control.h
packaging/: org.tizen.quickpanel.manifest  org.tizen.quickpanel.spec
po/: CMakeLists.txt  ar.po  as.po  az.po  be_BY.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  (+34 more)
res/edje/: quickpanel.edc  quickpanel_activenoti.edc  quickpanel_brightness.edc.h  quickpanel_datetime.edc  quickpanel_listitem_noti.edc  quickpanel_minictrl.edc  quickpanel_noti_section.edc.h  quickpanel_page_setting_all.edc  quickpanel_setting.edc  quickpanel_theme.edc  quickpanel_voice_control.edc
res/po/: ar.po  bn_BD.po  el_GR.po  es_ES.po  es_US.po  eu.po  fi.po  gl.po  hi.po  hr.po  hy.po  is.po  it_IT.po  ja_JP.po  lt.po  mk.po  my_MM.po  nl.po  or.po  pl_SP.po  pt_BR.po  pt_PT.po  ru_RU.po  sl.po  sr.po  sv.po  ta.po  tg_TJ.po  th.po  tl.po  tr_TR.po  uk.po  uz.po  vi.po
src/: accessibility.c  common.c  common_uic.c  handler_controller.c  list_util.c  modules.c  quickpanel-ui.c  quickpanel_debug_util.c  sim_controller.c  voice_control.c
src/datetime/: datetime.c
src/device/: brightness.c
src/minictrl/: minictrl.c
src/notifications/: activenoti.c  animated_image.c  noti.c  noti_list_item.c  noti_listbox.c  noti_section.c  noti_view.c  noti_view_listype.c  noti_view_ongoing.c  noti_win.c
src/page/: page_base.c  page_edit.c  page_setting_all.c  pager.c  pager_common.c
src/service/: animated_icon.c  emergency_mode.c  noti_led.c
src/settings/: setting_module_api.c  setting_utils.c  settings_gridbox.c  settings_view_all.c  settings_view_featured.c
src/settings/modules/: bluetooth.c  gps.c  rotate-lock.c  sound-profile.c  wifi.c
src/vi/: vi_manager.c
